Fixed positioning error on mobile devices (letter-spacing)

--- a/src/Resources/public/styles/cookiebar_default.css
+++ b/src/Resources/public/styles/cookiebar_default.css
@@ -7,6 +7,7 @@
   bottom: 0;
   z-index: 9999;
   font-size: 0;
+  letter-spacing: 0;
   text-align: center;
   padding: 15px;
   max-height: 100vh;
